Add directories controller and view

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -38,3 +38,6 @@ es:
   will_paginate:
     previous_label: "Anterior"
     next_label: "Siguiente"
+
+  # Directories
+  directories: "Directorios"
